# lab0-titanic-pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  main.py  pyproject.toml  run_all.py
.dvc/: config
app/: main.py  schemas.py
bruno/Titanic API/: Predict Multiple.yml  Predict Single.yml  opencollection.yml
conf/: config.yaml
conf/data/: titanic.yaml
conf/features/: titanic.yaml
conf/model/: gradient_boosting.yaml  random_forest.yaml
notebooks/: Titanic Lab.ipynb
pipelines/: batch_inference.py
scripts/: load_to_motherduck.py  predict.py
src/training/: data_loader.py  feature_engineering.py  mlflow_config.py  preprocessor.py  train.py
